[package]
name = "reactron"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "EventTarget",
    "HtmlCanvasElement",
    "MouseEvent",
    "Window",
]
